[package]
name = "dip721-rs"
version = "0.1.0"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
edition = "2021"
categories = ["wasm", "web-programming"]
description = "A rust library implementing the DIP721 NFT standard types for Internet Computer"
homepage = "https://github.com/veeso/dip721-rs"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["interet-computer", "nft", "ic", "dfinity", "dip721"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso/dip721-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dip721_rs"
path = "src/lib.rs"

[features]
default = ["ic-stable-structures"]
ic-stable-structures = ["dep:ic-stable-structures"]

[dependencies]
async-trait = "0.1"
candid = "0.10"
ic-cdk = "0.12"
ic-stable-structures = { version = "0.6", optional = true }
serde = "^1"
thiserror = "^1"

[dev-dependencies]
pretty_assertions = "^1"
